FEATURE: Added reading plan support
